Fix spacing in header and body

--- a/styles.css
+++ b/styles.css
@@ -16,16 +16,14 @@ body {
   background-color: #1F2937;
   color: white;
   gap: 40px;
-  padding: 0px 200px 0px 200px;
 }
 
 .header {
-  /*border: 2px solid red;*/
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 570px;
+  gap: 340px;
   margin-bottom: 10px;
 }
 
@@ -55,8 +53,8 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 40px;
-  gap: 200px;
+  margin-bottom: 30px;
+  gap: 150px;
 }
 
 .container .left {
@@ -78,12 +76,11 @@ a {
 }
 
 .text {
-  display: inline-flex;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 
 .placeholder {
-  padding: 100px 200px 100px 200px;
+  padding: 100px;
   background-color: gray;
 }
 
@@ -92,6 +89,8 @@ a {
 .upper {
   flex: 1;
   background-color: white;
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
 
 .content {
@@ -107,7 +106,7 @@ img {
 
 .content .upper .title {
   text-align: center;      
-  margin-bottom: 32px;
+  margin-bottom: 20px;
   font-size: 36px;
   font-weight: extra-bold;
   color: #1F2937;
@@ -139,6 +138,7 @@ img {
   display: flex;
   justify-content: center;
   background-color: #E5E7EB;
+  margin-top: 10px;
 }
 
 .midbox {
@@ -146,28 +146,33 @@ img {
   flex-direction: column;
   align-items: flex-end;
   width: 700px;
-  font-size: 36px;
+  font-size: 32px;
+  padding: 16px;
+}
+
+.quote {
+  font-style: italic;
 }
 
 .author {
   font-size: 25px;
   font-weight: bolder;
+  margin-right: 3px;
 }
 
-/*end*/
 .end {
   flex: 1;
   display: flex;
   justify-content: center;
-  padding: 16px;
+  padding: 50px;
 }
 
 .innerBox {
   background-color: #3882F6;
-  padding: 40px;
+  padding: 50px 250px 50px 250px;
   display: flex;
   gap: 50px;
-  border-radius: 2%;
+  border-radius: 0.8%;
 }
 
 .innerBox .left {
@@ -190,6 +195,7 @@ img {
   justify-content: center;
   background-color: #1F2937;
   color: white;
+  padding: 20px;
 }
 
 
